--- a/envrc.sample
+++ b/envrc.sample
@@ -1,9 +1,7 @@
 layout node
 
 export ETHERSCAN_API_KEY=""
-export INFURA_KEY=""
 export PRIVATE_KEY=""
-export RPC_MAINNET="https://mainnet.infura.io/v3/${INFURA_KEY}"
-export BLOCK_MAINNET="15100757"
-export RPC_ARB="https://arb1.arbitrum.io/rpc"
-export BLOCK_ARB=46334701
+export GOERLI_URL=""
+export ARB_URL="https://arb1.arbitrum.io/rpc"
+export ARB_BLOCK=46334701
