--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.1",
     "hardhat": "^2.12.0",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.3.9",
     "typescript": "^4.8.4",
     "weth": "^1.0.4"
   },
