--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
     "@nomicfoundation/hardhat-foundry": "^1.0.1",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@types/prompts": "^2.4.6",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0",
+    "prompts": "^2.4.2",
     "solhint": "^3.3.7",
     "ts-node": "^10.8.1"
   }
