--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^5.2.0",
     "fs-extra": "^11.1.1",
+    "kleur": "^4.1.5",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0",
     "prompts": "^2.4.2",
